// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AttributeContainerRow > should match snapshot 1`] = `
<body>
  <div>
    <div
      class="css-1yo1jo6-MuiStack-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-6fsf27-MuiTypography-root"
      >
        Test
      </p>
      <div
        class="css-1n0vvv1-MuiStack-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeSmall css-1u51hmi-MuiSvgIcon-root"
          data-testid="CloseIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
        <button
          aria-label="showInfoSrLabel"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1bptiuh-MuiSvgIcon-root"
            data-testid="InfoIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
      <span
        class="MuiTypography-root MuiTypography-body2 css-1besck7-MuiTypography-root"
      >
        or
      </span>
    </div>
  </div>
</body>
`;

exports[`AttributeContainerRow > should match snapshot with attribute on active state 1`] = `
<body>
  <div>
    <div
      class="css-1yo1jo6-MuiStack-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-6fsf27-MuiTypography-root"
      >
        Test
      </p>
      <div
        class="css-1n0vvv1-MuiStack-root"
      >
        <svg
          aria-hidden="true"
          aria-label="certified.ACTIVE"
          class="MuiSvgIcon-root MuiSvgIcon-colorSuccess MuiSvgIcon-fontSizeSmall css-1ucxkcv-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="CheckIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
          />
        </svg>
        <button
          aria-label="showInfoSrLabel"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1bptiuh-MuiSvgIcon-root"
            data-testid="InfoIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
      <span
        class="MuiTypography-root MuiTypography-body2 css-1besck7-MuiTypography-root"
      >
        or
      </span>
    </div>
  </div>
</body>
`;

exports[`AttributeContainerRow > should match snapshot with attribute on revoked state 1`] = `
<body>
  <div>
    <div
      class="css-1yo1jo6-MuiStack-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-6fsf27-MuiTypography-root"
      >
        Test
      </p>
      <div
        class="css-1n0vvv1-MuiStack-root"
      >
        <svg
          aria-hidden="true"
          aria-label="certified.REVOKED"
          class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeSmall css-1efkf0c-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="CloseIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
        <button
          aria-label="showInfoSrLabel"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1bptiuh-MuiSvgIcon-root"
            data-testid="InfoIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
      <span
        class="MuiTypography-root MuiTypography-body2 css-1besck7-MuiTypography-root"
      >
        or
      </span>
    </div>
  </div>
</body>
`;

exports[`AttributeContainerRow > should match snapshot with the "or" label 1`] = `
<body>
  <div>
    <div
      class="css-1yo1jo6-MuiStack-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-6fsf27-MuiTypography-root"
      >
        Test
      </p>
      <div
        class="css-1n0vvv1-MuiStack-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeSmall css-1u51hmi-MuiSvgIcon-root"
          data-testid="CloseIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
        <button
          aria-label="showInfoSrLabel"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1bptiuh-MuiSvgIcon-root"
            data-testid="InfoIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
      <span
        class="MuiTypography-root MuiTypography-body2 css-1nlxk53-MuiTypography-root"
      >
        or
      </span>
    </div>
  </div>
</body>
`;

exports[`AttributeContainerRowSkeleton > should match snapshot 1`] = `
<body
  style=""
>
  <div>
    <div
      class="css-1yo1jo6-MuiStack-root"
    >
      <div
        class="MuiBox-root css-1rr4qq7"
      >
        <div
          class="MuiBox-root css-11ze7cv"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
          />
        </div>
      </div>
      <div
        class="css-172p5tq-MuiStack-root"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-fomgco-MuiSkeleton-root"
          style="width: 19px; height: 19px;"
        />
      </div>
      <span
        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-fw9igz-MuiSkeleton-root"
        style="width: 52px;"
      />
    </div>
  </div>
</body>
`;
